--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_sign_in: ^6.1.0
+  firebase_auth: ^4.4.2
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.10.0
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +62,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/g-logo.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
