--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  video_player: ^2.6.1
+  share_plus: ^6.3.4
+  image_picker: ^0.8.7+4
+  firebase_core: ^2.10.0
+  google_sign_in: ^6.1.0
+  firebase_auth: ^4.4.2
+
 
 dev_dependencies:
   flutter_test:
@@ -58,10 +65,12 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/g-logo.png
+    - assets/profilImage.jpg
+    #   - images/a_dot_burr.jpeg
+    #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
