--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_core: ^2.10.0
   google_sign_in: ^6.1.0
   firebase_auth: ^4.4.2
+  font_awesome_flutter: ^10.4.0
+  provider: ^6.0.5
 
 
 dev_dependencies:
@@ -69,6 +71,7 @@ flutter:
   assets:
     - assets/g-logo.png
     - assets/profilImage.jpg
+    - lib/images/
     #   - images/a_dot_burr.jpeg
     #   - images/a_dot_ham.jpeg
 
