in coming from tikotk views

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\users\\mcs\\AppData\\Local\\Android\\SDK
-flutter.sdk=C:\\src\\flutter
+sdk.dir=/home/dd/Android/Sdk
+flutter.sdk=/home/dd/snap/flutter/common/flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
