--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,20 +30,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  cached_network_image: ^3.2.3
+  cloud_firestore: ^4.8.1
+  cupertino_icons: ^1.0.2
+  firebase_auth: ^4.6.3
+  firebase_core: ^2.14.0
+  firebase_storage: ^11.2.3
+  get: ^4.6.5
+  image_picker: ^0.8.9 
+  timeago: ^3.4.0
+  video_compress: ^3.1.2
+  video_player: ^2.6.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  video_player: ^2.6.1
-  share_plus: ^6.3.4
-  image_picker: ^0.8.7+4
-  firebase_core: ^2.10.0
-  google_sign_in: ^6.1.0
-  firebase_auth: ^4.4.2
-  font_awesome_flutter: ^10.4.0
-  provider: ^6.0.5
-
+  
+  
 
 dev_dependencies:
   flutter_test:
@@ -67,13 +69,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-    # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/g-logo.png
-    - assets/profilImage.jpg
-    - lib/images/
-    #   - images/a_dot_burr.jpeg
-    #   - images/a_dot_ham.jpeg
+  # To add assets to your application, add an assets section, like this:
+  # assets:
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
