--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   timeago: ^3.4.0
   video_compress: ^3.1.2
   video_player: ^2.6.1
+  fluttertoast: ^8.2.2
+  chewie: ^1.5.0
+  video_thumbnail: ^0.5.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
