--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,12 @@ dependencies:
   fluttertoast: ^8.2.2
   chewie: ^1.5.0
   video_thumbnail: ^0.5.3
+  flutter_easyloading: ^3.0.5
+  share_plus: ^7.0.2
+  url_launcher: ^6.1.11
+  flutter_downloader: ^1.10.4
+  path_provider: ^2.0.15
+  sn_progress_dialog: ^1.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -79,8 +85,7 @@ flutter:
       - asset: assets/fonts/TikTokIcons.ttf
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - lib/images/
+  # assets:
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
