--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   flutter_downloader: ^1.10.4
   path_provider: ^2.0.15
   sn_progress_dialog: ^1.1.3
+  gallery_saver: ^2.3.2
+  dio: ^5.2.1+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
